--- a/Project/index.html
+++ b/Project/index.html
@@ -1,13 +1,3 @@
-<!--
-
-    Starter.html made by Guacamoleboy
-          Feel free to use it
-        No need to credit me :/
-
-             Remove this
-
--->
-
 <!DOCTYPE html>
 <html lang="da">
 <head>
@@ -20,11 +10,11 @@
     <meta name="author" content="Guacamoleboy"> <!-- Author of Website -->
 
     <!-- Visuals -->
-    <title>Starter Template</title>
+    <title>Carpool</title>
 
     <!-- Icon -->
-    <link rel="icon" href="#" type="image/x-icon">
-    <link rel="apple-touch-icon" href="#">
+    <link rel="icon" href="assets/images/icons/tur-retur.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="assets/images/icons/tur-retur.png">
 
     <!-- CSS Load -->
     <link rel="stylesheet" href="assets/css/main-css.css">
