--- a/Project/register/register.html
+++ b/Project/register/register.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Guacamoleboy"> <!-- Author of Website -->
 
     <!-- Visuals -->
-    <title>Carpool - Log Ind</title>
+    <title>Carpool - Register</title>
 
     <!-- Icon -->
     <link rel="icon" href="../assets/images/icons/tur-retur.png" type="image/x-icon">
@@ -32,34 +32,30 @@
     <button id="darkModeToggle" class="darkmode-btn-floating" title="Skift tema"></button>
     <!-- Darkmode button End -->
 
-    <!-- Login Section Start -->
+    <!-- Register Section Start -->
     <section class="login-section-1">
         <div class="login-container">
-            <h2>Log Ind</h2>
-            <form id="loginForm">
+            <h2>Opret Bruger</h2>
+            <form id="registerForm">
                 <input type="text" placeholder="Brugernavn" required>
                 <input type="password" placeholder="Adgangskode" required>
                 <div class="login-btn-group">
-                    <button type="submit" class="guac-btn guac-btn-find" onclick="window.location.href='../index.html'">
-                        Log Ind
-                    </button>
-                    <button type="button" class="guac-btn guac-btn-orange" id="registerBtn" onclick="window.location.href='../register/register.html'">
+                    <button type="button" class="guac-btn guac-btn-orange" onclick="window.location.href='../index.html'">
                         Opret Bruger
                     </button>
                 </div>
             </form>
         </div>
     </section>
-    <!-- Login Section End -->
+    <!-- Register Section End -->
 
     <!-- Scripts without "defer" loads on website load -->
     <script src="../assets/js/guacamoleboy-wow.js"></script>
     <script src="../assets/js/placeholder-reload.js"></script>
     <script src="../assets/js/error-input.js"></script>
     <script src="../assets/js/mobile-nav.js"></script>
-    <script src="../assets/js/login-register.js"></script>
     <script src="../assets/js/bubble-spawn.js"></script>
     <script src="../assets/js/darkmode.js"></script>
-
+   
 </body>
 </html>
