Final visual overhauls - Project Done

--- a/Project/index.html
+++ b/Project/index.html
@@ -38,7 +38,7 @@
     <!-- Scroll-to-Top Button End -->
 
     <!-- Header Start -->
-    <section>
+    <section id="start">
         <nav class="guac-navbar guac-d-flex guac-justify-between guac-align-center guac-p-3 guac-animate guac-slide-down">
             <div class="guac-navbar-brand guac-fs-5 guac-fw-bold">
                 <a href="index.html">
@@ -158,7 +158,7 @@
     <!-- Why us End -->
 
     <!-- Footer Start -->
-    <section class="section-3 guac-pt-5 guac-pb-5 guac-animate guac-zoom-in">
+    <section class="section-3 guac-pb-5 guac-animate guac-zoom-in">
         <div class="guac-container">
             <div class="guac-row guac-justify-between">
                 <div class="guac-col-auto footer-col">
