--- a/Project/login/login.html
+++ b/Project/login/login.html
@@ -23,14 +23,16 @@
     <link rel="stylesheet" href="../assets/css/guacamoleboy-animations.css">
 
     <!-- Scripts can also be loaded here with defer -->
-    <!-- <script src="assets/js/guacamoleboy-wow.js" defer></script> -->
+    <script src="../assets/js/bubble-spawn.js" defer></script>
+    <script src="../assets/js/mobile-nav.js" defer></script>
+    <script src="../assets/js/placeholder-reload.js" defer></script>
 
 </head>
 <body class="dark-mode">
 
-    <!-- Darkmode button Start -->
-    <button id="darkModeToggle" class="darkmode-btn-floating" title="Skift tema"></button>
-    <!-- Darkmode button End -->
+    <!-- Exit Button Start -->
+    <a href="../index.html" class="exit-btn" title="Tilbage til forsiden">&#10006;</a>
+    <!-- Exit Button End -->
 
     <!-- Login Section Start -->
     <section class="login-section-1">
@@ -54,12 +56,7 @@
 
     <!-- Scripts without "defer" loads on website load -->
     <script src="../assets/js/guacamoleboy-wow.js"></script>
-    <script src="../assets/js/placeholder-reload.js"></script>
     <script src="../assets/js/error-input.js"></script>
-    <script src="../assets/js/mobile-nav.js"></script>
-    <script src="../assets/js/login-register.js"></script>
-    <script src="../assets/js/bubble-spawn.js"></script>
-    <script src="../assets/js/darkmode.js"></script>
 
 </body>
 </html>
