--- a/Project/index.html
+++ b/Project/index.html
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="assets/css/main-css.css">
     <link rel="stylesheet" href="assets/css/guacamoleboy-wow.css">
     <link rel="stylesheet" href="assets/css/guacamoleboy-framework.css">
-    <link rel="stylesheet" href="assets/css/guacamoleboy-animations.css">
 
     <!-- Scripts can also be loaded here with defer -->
     <!-- <script src="assets/js/guacamoleboy-wow.js" defer></script> -->
@@ -75,7 +74,7 @@
                 <li><a href="#">Stats</a></li>
                 <li><a href="#">Om</a></li>
                 <li><a href="#">Kontakt</a></li>
-                <li><a href="#" class="guac-btn guac-btn-orange">Log Ind</a></li>
+                <li><a href="login/login.html" class="guac-btn guac-btn-orange">Log Ind</a></li>
             </ul>
         </div>
     </nav>
