--- a/Project/register/register.html
+++ b/Project/register/register.html
@@ -45,6 +45,9 @@
                     <button type="button" class="guac-btn guac-btn-orange" onclick="window.location.href='../index.html'">
                         Opret Bruger
                     </button>
+                    <button type="button" class="guac-btn guac-btn-orange" onclick="window.location.href='../login/login.html'">
+                        Tilbage
+                    </button>
                 </div>
             </form>
         </div>
